--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,9 @@ body {
   font-size: 14px;
   background-color: var(--background-color-dark);
   color: var(--color-light);
+  padding: 0;
+  max-width: 1500px;
+  margin: 0 auto;
 }
 
 /* Styles for tablets (portrait) and up */
